--- a/sass/pages/projects/_project.scss
+++ b/sass/pages/projects/_project.scss
@@ -16,8 +16,11 @@
       justify-content: center;
       align-items: flex-start;
       padding-top: 3rem;
-      width: 75rem;
+      flex: 1;
       height: 60rem;
+      @media screen and (max-width: $bp-large) {
+        margin-bottom: 10rem;
+      }
     }
     &-right {
       flex: 1;
@@ -80,9 +83,6 @@
   &__img {
     width: 90%;
     border-radius: 10px;
-    @media screen and (max-width: $bp-small) {
-      width: 70%;
-    }
   }
   img {
     box-shadow: $shadow-small;
@@ -112,15 +112,7 @@
     margin-top: 3rem;
     border-radius: 40px;
     @media screen and (max-width: $bp-large) {
-      height: 90%;
-      width: 35%;
+      width: 40%;
     }
-  }
-}
-
-#e-portfolio .project__container-right,
-#learning-package .project__container-right {
-  @media screen and (max-width: $bp-small) {
-    margin-top: -15rem;
   }
 }
